Solved the header alignment issue

--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -32,7 +32,7 @@
     position: fixed;
     height: 50px;
     margin-left: 0em;
-    margin-top: 4em;
+    margin-top: 3.5em;
     visibility: visible;
     cursor: pointer;
 }
@@ -40,10 +40,10 @@
 .zinzen-text-logo-nav-dashboard{
   position: absolute;
     cursor: pointer;
-    margin-top: 5em;
+    margin-top: 6em;
     padding-top: 0.5em;
     margin-bottom: 2.7em;
-      margin-left: 50%;
+      margin-left: 42%;
       width:10%;
       cursor: pointer;
 }
@@ -240,7 +240,7 @@
     width: 10%;
     height: 100px;
     margin-left: 0.5em;
-    margin-top: 2.5em;
+    margin-top: 3em;
     visibility: visible;
     cursor: pointer;
     }
